--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h2>Yangi vazifa qo'shish</h2>
 
         <label>Vazifa nomi</label>
-        <input type="text" placeholder="Masalan: Find the sword">
+        <input type="text" class="input" placeholder="Masalan: Find the sword">
 
         <div class="row">
              <div class="col">
              <label>Qiyinchilik</label>
-            <select>
+            <select class="select">
                 <option>Easy</option>
                 <option>Medium</option>
                  <option>Hard</option>
@@ -30,7 +30,7 @@
          </div>
 
             <label>Tavsif</label>
-            <textarea placeholder="Qisqacha vazifa tavsifi..."></textarea>
+            <textarea class="textarea" placeholder="Qisqacha vazifa tavsifi..."></textarea>
 
         <div class="btns">
          <button class="add">ADD TASK</button>
@@ -41,6 +41,7 @@
 
         <button class="uppercase">ALL UPPERCASE</button>
     </div>
+      <div class="task-list"></div>
     <script src="./script.js"></script>
 </div>
 </body>
